plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2' apply(false)
    id 'io.spring.dependency-management' version '1.1.4' apply(false)
    id 'application'
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

allprojects {
    group = 'com.flz'
    version = '1.0.3'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.0"
            mavenBom 'org.springframework.boot:spring-boot-dependencies:3.2.3'
        }
    }
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter:3.2.2'
        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'
        implementation 'org.mapstruct:mapstruct:1.6.2'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
        implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
        implementation 'com.auth0:java-jwt:4.4.0'
        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.2'
        implementation 'org.springframework.cloud:spring-cloud-starter-config:4.1.2'
        implementation 'org.springframework.cloud:spring-cloud-config-client:4.1.2'
        implementation 'org.springframework.cloud:spring-cloud-config-server:4.1.2'
        implementation 'org.flywaydb:flyway-core:10.20.0'
        runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.20.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
        testImplementation 'org.mockito:mockito-core:5.14.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
        testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.2'
        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.2.2'
        testImplementation 'org.testcontainers:junit-jupiter:1.21.0'
        testImplementation 'org.testcontainers:postgresql:1.21.0'
        testImplementation 'org.awaitility:awaitility:4.2.2'
    }
}
allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
